<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">虎爸虎妈</string>
    <string name="title_activity_splash">虎爸虎妈</string>
    <string name="uid">mayuan0407</string>
    <string name="key">40e467b7568f820cf776</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="title_activity_writing">WritingActivity</string>
    <string name="title_activity_discovery">DiscoveryActivity</string>
    <string name="title_activity_organization">ProfileOrganiztionActivity</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_group_manage">GroupManageActivity</string>
    <string name="title_activity_manage_book">ManageBookActivity</string>
    <string name="title_activity_change_group_dialog">ChangeGroupDialog</string>
    <string name="title_activity_group_rename_dialog">GroupRenameDialog</string>
    <string name="title_activity_add_group_dialog">GroupRenameDialog</string>
    <string name="login">登录</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="confirm">确定</string>
    <string name="next">下一步</string>
    <string name="news">动态</string>
    <string name="writing">写作</string>
    <string name="discovery">发现</string>
    <string name="info">资讯</string>
    <string name="profile">设置</string>
    <string name="notice">通知</string>
    <string name="message">消息</string>
    <string name="teaching_diary">教学日志</string>
    <string name="manage_book">管理本</string>
    <string name="contacts">通讯录</string>
    <string name="teacher">教师</string>
    <string name="parents">家长</string>
    <string name="group">群</string>
    <string name="send">发送</string>
    <string name="chat_input_hint">写评论&#8230;</string>
    <string name="search_input_hint">搜索名字或虎爸虎妈ID</string>
    <string name="add_contact">添加用户到通讯录</string>
    <string name="input_group_name">输入群名称</string>
    <string name="add_group_and_invite">创建并邀请好友</string>
    <string name="invite_user">邀请用户</string>
    <string name="choose_user_to_invite">选择您要邀请到群的成员</string>
    <string name="search_result">已搜索到：</string>
    <string name="add_contact_input_hint">输入虎爸虎妈ID/手机号</string>
    <string name="search_group">查找群</string>
    <string name="new_group">新建群</string>
    <string name="search_group_input_hint">搜索分组关键字</string>
    <string name="group_manage">分组管理</string>
    <string name="group_list">分组</string>
    <string name="add">添加</string>
    <string name="delete">删除</string>
    <string name="rename">改名</string>
    <string name="change_group_dialog_title">修改当前用户分组</string>
    <string name="change_group_dialog_subtitle">请输入已有的分组名称</string>
    <string name="group_rename_dialog_title">修改当前分组名称</string>
    <string name="group_rename_dialog_subtitle">请输入新的分组名称</string>
    <string name="add_new_group_title">新建分组</string>
    <string name="add_new_group_subtitle">支持汉子、英文字母或数字</string>
    <string name="title_activity_contacts">ContactsActivity</string>
    <string name="title_activity_add_contact">AddContactActivity</string>
    <string name="title_activity_search_result_fragment">SearchResultFragment</string>
    <string name="title_activity_add_chat_group">AddChatGroupActivity</string>
    <string name="title_activity_prompt_dialog">PromptDialog</string>
    <string name="title_activity_loading_dialog">LoadingDialog</string>
    <string name="title_activity_invite_user">InviteUserActivity</string>
    <string name="title_activity_teaching_diary">TeachingDiaryActivity</string>
    <string name="title_activity_profile_teacher">ProfileTeacherActivity</string>
    <string name="title_activity_profile_parents">ProfileParentsActivity</string>
    <string name="qualification">资质认证</string>
    <string name="title_activity_published_article">PublishedArticleActivity</string>
    <string name="title_activity_comments">CommentsActivity</string>
    <string name="title_activity_write_comment">WriteCommentActivity</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="title_activity_train">TrainActivity</string>
    <string name="no_data">没有找到符合条件的信息</string>
    <string name="follow">关注</string>
    <string name="environment">环境</string>
    <string name="location">位置</string>
    <string name="consult">咨询</string>
    <string name="title_activity_publish_notice">PublishNoticeActivity</string>
    <string name="title_activity_profile_self">ProfileSelfActivity</string>
    <string name="title_activity_change_phone">ChangePhoneActivity</string>
    <string name="change_phone_hint">更换手机后，下次登录可使用新手机号登录。 当前手机号为：</string>
    <string name="title_activity_password_reset">PasswordResetActivity</string>
    <string name="title_activity_change_info">ChangeInfoActivity</string>
    <string name="title_activity_school_img_manage">SchoolImgManageActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_change_tag">ChangeTagActivity</string>
    <string name="title_activity_my_notice">MyNoticeActivity</string>
    <string name="title_activity_receipt">ReceiptActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_auth_code">AuthCodeActivity</string>
    <string name="title_activity_search_teacher">SearchTeacherActivity</string>

</resources>
