<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_title_top_margin"
        android:layout_marginBottom="@dimen/dialog_title_bottom_margin"
        android:textSize="20sp"
        android:text="@string/change_group_dialog_title" />

    <TextView
        android:id="@+id/dialog_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/change_group_dialog_subtitle" />
    
    <EditText
        android:id="@+id/input_box"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dialog_input_box_margin"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="9dp"
        android:paddingBottom="9dp"
        android:singleLine="true"
        android:textSize="16sp"
        android:background="@drawable/dialog_edit_text_bg"
        android:inputType="text" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:textSize="16sp"
            android:text="@string/cancel"
            android:textColor="@color/text_blue" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/grey" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:enabled="false"
            android:textSize="16sp"
            android:text="@string/save"
            android:textColor="@color/grey" />
    </LinearLayout>

</LinearLayout>