<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <!-- title -->

    <RelativeLayout
        android:id="@+id/topbar_message"
        android:layout_width="match_parent"
        android:layout_height="@dimen/topbar_height"
        android:background="@color/topbar_bg"
        android:paddingBottom="@dimen/topbar_vertical_padding"
        android:paddingLeft="@dimen/topbar_horizontal_padding"
        android:paddingRight="@dimen/topbar_horizontal_padding"
        android:paddingTop="@dimen/topbar_vertical_padding" >

        <TextView
            style="@style/TopBarTitle"
            android:text="@string/add" />

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/back" />
    </RelativeLayout>
    
    <!-- content -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/search_result"
        android:textColor="@color/grey_hint"
        android:textSize="14sp" />
    
    <ListView
        android:id="@+id/search_result_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null"
        android:cacheColorHint="@null"
        android:divider="@color/contacts_list_divider"
        android:dividerHeight="0.5dp"
        android:fadingEdge="none"
        android:fastScrollEnabled="false"
        android:headerDividersEnabled="true"
        android:footerDividersEnabled="true"
        android:paddingTop="@dimen/msglist_top_padding"
        android:smoothScrollbar="true" />

</LinearLayout>