<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <!-- title -->

    <RelativeLayout
        android:id="@+id/topbar_message"
        android:layout_width="match_parent"
        android:layout_height="@dimen/topbar_height"
        android:background="@color/topbar_bg"
        android:paddingBottom="@dimen/topbar_vertical_padding"
        android:paddingTop="@dimen/topbar_vertical_padding" >

        <TextView
            style="@style/TopBarTitle"
            android:text="@string/new_group" />

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:contentDescription="@string/app_name"
            android:paddingLeft="@dimen/topbar_horizontal_padding"
            android:paddingRight="0dp"
            android:scaleType="centerInside"
            android:src="@drawable/back" />
    </RelativeLayout>

    <!-- search bar -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/search_box_vertical_padding"
        android:paddingLeft="@dimen/search_box_horizontal_padding"
        android:paddingRight="@dimen/search_box_horizontal_padding"
        android:paddingTop="@dimen/search_box_vertical_padding" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/input_group_name"
            android:textColor="@color/grey_hint"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/search_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:drawablePadding="8dp"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:padding="8dp"
            android:singleLine="true" />
    </LinearLayout>

    <TextView 
        android:id="@+id/prompt_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:textColor="@color/btn_red"
        android:visibility="invisible"
        android:text="错误提示"/>
    
    <Button 
        android:id="@+id/btn_add_chat_group"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/add_group_and_invite"
        android:textColor="@color/text_light"
        android:background="@drawable/btn_red_bg"/>
    
    <ProgressBar 
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:visibility="gone"/>

</LinearLayout>