<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <!-- title -->

    <RelativeLayout
        android:id="@+id/topbar_message"
        android:layout_width="match_parent"
        android:layout_height="@dimen/topbar_height"
        android:background="@color/topbar_bg"
        android:paddingBottom="@dimen/topbar_vertical_padding"
        android:paddingLeft="@dimen/topbar_horizontal_padding"
        android:paddingRight="@dimen/topbar_horizontal_padding"
        android:paddingTop="@dimen/topbar_vertical_padding" >

        <TextView
            style="@style/TopBarTitle"
            android:text="@string/add" />

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/back" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <!-- search bar -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/search_box_vertical_padding"
            android:paddingLeft="@dimen/search_box_horizontal_padding"
            android:paddingRight="@dimen/search_box_horizontal_padding"
            android:paddingTop="@dimen/search_box_vertical_padding" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/add_contact"
                android:textColor="@color/grey_hint"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/search_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_bg"
                android:drawablePadding="8dp"
                android:hint="@string/add_contact_input_hint"
                android:imeOptions="actionSearch"
                android:padding="8dp"
                android:singleLine="true" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/search_group_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="120dp"
            android:background="@color/add_bar_bg"
            android:padding="12dp" >

            <ImageView
                android:id="@+id/search_group_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerInside"
                android:src="@drawable/search_group" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/search_group_icon"
                android:text="@string/search_group"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:scaleType="centerInside"
                android:src="@drawable/circle_arrow" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/new_group_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="175dp"
            android:layout_marginBottom="5dp"
            android:background="@color/add_bar_bg"
            android:padding="12dp" >

            <ImageView
                android:id="@+id/new_group_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerInside"
                android:src="@drawable/new_group" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/new_group_icon"
                android:text="@string/new_group"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:scaleType="centerInside"
                android:src="@drawable/circle_arrow" />
        </RelativeLayout>

    </FrameLayout>

</LinearLayout>